feat: Tests units

--- a/dexian_comerc/comerc_api/.env.example
+++ b/dexian_comerc/comerc_api/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Comerc
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:HM3VXTINCKKv7e9MRMLBpHv84p6FW47Vblw/rSHAxs0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -31,8 +31,11 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=68edd082eecbd6
-MAIL_PASSWORD=********6e36
+MAIL_USERNAME=6584f06965903a
+MAIL_PASSWORD=7ac5d28dca2019
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="contato@comerc.com"
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
