feat: New testing.

--- a/dexian_comerc/comerc_api/.env.example
+++ b/dexian_comerc/comerc_api/.env.example
@@ -28,11 +28,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=6584f06965903a
-MAIL_PASSWORD=7ac5d28dca2019
+#Cole aqui os dados de configurações para envio do email
+MAIL_MAILER=MAIL_TRAP
+MAIL_HOST=MAIL_TRAP
+MAIL_PORT=MAIL_TRAP
+MAIL_USERNAME=MAIL_TRAP
+MAIL_PASSWORD=MAIL_TRAP
+
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="contato@comerc.com"
 MAIL_FROM_NAME="${APP_NAME}"
