--- a/xdebug.ini
+++ b/xdebug.ini
@@ -1,9 +1,8 @@
 zend_extension=xdebug.so
 
-[xdebug]
-xdebug.mode=debug,develop,coverage
+xdebug.mode=develop,debug,coverage
 xdebug.start_with_request=yes
 xdebug.client_host=host.docker.internal
 xdebug.client_port=9003
-xdebug.idekey=PHPSTORM
-xdebug.discover_client_host=true
+xdebug.log=/tmp/xdebug.log
+xdebug.log_level=0
